<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerbg"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="470dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/textView4"
            style="@style/loginTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

        <TextView
            android:id="@+id/textView5"
            style="@style/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeTextInputLayout"
            style="@style/loginTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFEF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EFEFEF"
                android:cursorVisible="true"
                android:hint="@string/email_hint"
                android:inputType="text"
                tools:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/passwordTextView"
            style="@style/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFEF"
            tools:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EFEFEF"
                android:cursorVisible="true"
                android:hint="@string/password_hint"
                android:inputType="text"
                tools:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/confirmPassword"
            style="@style/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmpasswordInputLayout"
            style="@style/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFEF"
            tools:layout_marginBottom="8dp"
            tools:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmpasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EFEFEF"
                android:cursorVisible="true"
                android:hint="@string/confirm_text"
                android:inputType="text"
                tools:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button"
            style="@style/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Have an account? "
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text=" Log In"
                android:textColor="#131313" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>