<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="457dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/loginTextView"
            style="@style/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name" />

        <TextView
            android:id="@+id/subtitleLoginTextView"
            style="@style/loginTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_subtitle" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeTextInputLayout"
            style="@style/loginTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFEF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EFEFEF"
                android:cursorVisible="true"
                android:hint="@string/email_hint"
                android:inputType="text"
                tools:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/warningTextViewUserName"
            style="@style/loginWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/pwdTextView"
            style="@style/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFEF"
            tools:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EFEFEF"
                android:cursorVisible="true"
                android:hint="@string/password_hint"
                android:inputType="text"
                tools:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/warningTextViewUserName2"
            style="@style/loginWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button"
            style="@style/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Don't have an account? "
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text=" Register here"
                android:textColor="#131313" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>